typescript/checker/tests/conformance/es6/for-ofStatements/for-of48.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of48.ts:2:5
  |
2 | var x: string, y: number;
  |     ^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            31,
        ),
        hi: BytePos(
            32,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/for-ofStatements/for-of48.ts:2:16
  |
2 | var x: string, y: number;
  |                ^

